Issue 956:add getImage by id to ComputeService